# AIO-Projects

./: README.md
Contruction-Projects/: .gitignore  cleanup_out_of_scope.py
Contruction-Projects/notebooks/: EDA_Sensor_Data.ipynb
IMU-Synth-Generator/: .gitignore  README.md  generate_excavator_data.py  imu_synth_generator.py  requirements_imu.txt
Project-5.1/: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Blog-House_Sale_Prediction.md  MODEL_SELECTION.md  README.md  XAI_GUIDE.md  app.py  create_additional_plots.py  main.py  pyproject.toml  requirements.txt  save_best_model.py  streamlit_app.py
Project-5.1/.cursor/plans/: model-optimization-pipeline-b665b829.plan.md  stream-b88b0110.plan.md
Project-5.1/images/new/: pipeline.dot  pipeline_overview.mmd
Project-5.1/models/: best_model.pkl  best_model_config.json  best_model_features.json  model_comparison.csv
Project-5.1/notebooks/: Processing.ipynb  baseline.ipynb  model_optimization.ipynb
Project-5.1/reports/: ModelReport.md  ProcessReport.md
Project-5.1/src/: Encoding.py  Explainability.py  FeatureEngineering.py  Modeling.py  Preprocessing.py  Serving.py  TrainTestSplit.py  Transformation.py
Project-6.1/: .gitignore  Exercise_VIC_LTSF_Linear_Forecasting.ipynb  FPT_Advanced_GridSearch.ipynb  FPT_Forecasting_Complete.ipynb  FPT_HMM_MultiDLinear.ipynb  FPT_HMM_Regime_MultiDLinear.ipynb  FPT_LTSF_Advanced_Experiments.ipynb  FPT_LTSF_Comparison.ipynb  FPT_LTSF_Linear_Forecasting.ipynb  FPT_Regime_Ensemble_Forecast.ipynb  LSTF.ipynb
Project-6.1/results/: advanced_experiments.csv
(+47 files in other folders)
