[project]
name = "project-5-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "watchdog>=6.0.0",
    "xgboost>=3.1.1",
]
